force-app/main/default/objects/Opportunity/fields/Current_Interest_Reserves_Paid__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Reserves_Paid__c</fullName>
    <label>Current Interest Reserves Paid</label>
    <summarizedField>Property__c.Interest_Reserves__c</summarizedField>
    <summaryForeignKey>Property__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>