force-app/main/default/objects/Opportunity/fields/Current_Interest_Reserves_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Reserves_Remaining__c</fullName>
    <formula>Interest_Reserves__c -  Current_Interest_Reserves_Paid__c</formula>
    <label>Current Interest Reserves Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>