force-app/main/default/objects/Opportunity/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <inlineHelpText>Reason this Deal is in UW Hold</inlineHelpText>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower does not like terms</fullName>
            </value>
            <value>
                <fullName>Borrower does not meet requirements</fullName>
            </value>
            <value>
                <fullName>Borrower unresponsive</fullName>
            </value>
            <value>
                <fullName>Does not meet occupancy</fullName>
            </value>
            <value>
                <fullName>Economic Downturn</fullName>
            </value>
            <value>
                <fullName>In Process of Withdrawal/Rejection</fullName>
            </value>
            <value>
                <fullName>Other – See Deal Notes</fullName>
            </value>
            <value>
                <fullName>Pending Financial Documents/Tax Returns</fullName>
            </value>
            <value>
                <fullName>Pending Property Rehab</fullName>
            </value>
            <value>
                <fullName>Pending Rehab</fullName>
            </value>
            <value>
                <fullName>Property List Not Finalized</fullName>
            </value>
            <value>
                <fullName>Split Up Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>