force-app/main/default/objects/Opportunity/fields/In_Process_of_Withdrawn_or_Rejected__c.field-meta.xml
<CustomField>
    <fullName>In_Process_of_Withdrawn_or_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to identify if the Deal will go to Withdrawn or Rejected Stage</description>
    <inlineHelpText>If Deal is in UW Hold Stage and will go to Withdrawn or Rejected then populate the checkbox</inlineHelpText>
    <label>In Process of Withdrawn or Rejected</label>
    <type>Checkbox</type>
</CustomField>