force-app/main/default/objects/Opportunity/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Secured Overnight Financing Rate (SOFR)</description>
    <label>Index</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interest_Rate_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1M Term SOFR</fullName>
            </value>
            <value>
                <fullName>3M Term SOFR</fullName>
            </value>
            <value>
                <fullName>6M Term SOFR</fullName>
            </value>
            <value>
                <fullName>1Y Term SOFR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>