force-app/main/default/objects/Opportunity/fields/Interest_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Interest_Reserves__c</fullName>
    <description>Bridge Use</description>
    <label>Original Interest Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>