force-app/main/default/objects/Opportunity/fields/Last_Servicer_Import__c.field-meta.xml
<CustomField>
    <fullName>Last_Servicer_Import__c</fullName>
    <description>Date the last time the Servicer Data was updated by the integration</description>
    <inlineHelpText>Date the last time the Servicer Data was updated by the integration</inlineHelpText>
    <label>Last Servicer Import</label>
    <type>Date</type>
</CustomField>