force-app/main/default/objects/Opportunity/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <description>Bridge Use</description>
    <label>Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 Arch Funding</fullName>
            </value>
            <value>
                <fullName>5 Arch Funding Corp.</fullName>
            </value>
            <value>
                <fullName>A&amp;S Capital</fullName>
            </value>
            <value>
                <fullName>Asset Based Lending</fullName>
            </value>
            <value>
                <fullName>Bellevue</fullName>
            </value>
            <value>
                <fullName>Best Lending Co Inc</fullName>
            </value>
            <value>
                <fullName>CAF Bridge Lending</fullName>
            </value>
            <value>
                <fullName>CoreVest American Finance Lender LLC, a Delaware limited liability company</fullName>
                <default>true</default>
                <label>CoreVest American Finance Lender LLC, a Delaware limited liability company</label>
            </value>
            <value>
                <fullName>Dominion Group</fullName>
            </value>
            <value>
                <fullName>Great Lakes Financing</fullName>
            </value>
            <value>
                <fullName>iFundCities</fullName>
            </value>
            <value>
                <fullName>Navigator Private Capital, LLC</fullName>
            </value>
            <value>
                <fullName>Paradyme Funding</fullName>
            </value>
            <value>
                <fullName>Patch of Land Lending</fullName>
            </value>
            <value>
                <fullName>Revolution Realty Capital LLC</fullName>
            </value>
            <value>
                <fullName>Riverbend Lending</fullName>
            </value>
            <value>
                <fullName>Sundae</fullName>
            </value>
            <value>
                <fullName>Sunset Equity</fullName>
            </value>
            <value>
                <fullName>Third Party Originator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>