force-app/main/default/objects/Opportunity/fields/LOC_Commitment__c.field-meta.xml
<CustomField>
    <fullName>LOC_Commitment__c</fullName>
    <description>Line of Credit Commitment
Bridge Use - This is the maximum loan amount. Previously called &quot;LOC Commitment.&quot;</description>
    <label>Loan Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>