force-app/main/default/objects/Opportunity/fields/Maturity_Date_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date_Calculation_Type__c</fullName>
    <description>This controls when the Loan Maturity Date is set</description>
    <inlineHelpText>This controls when the Loan Maturity Date is set</inlineHelpText>
    <label>Maturity Date Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LOC_Loan_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fixed at Closing</fullName>
            </value>
            <value>
                <fullName>Fixed at First Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>