force-app/main/default/objects/Opportunity/fields/Over_LOC_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Over_LOC_Commitment__c</fullName>
    <description>Previously named &quot;Over LOC Commitment&quot;.</description>
    <formula>IF( ISPICKVAL(Revolving1__c, &apos;No&apos;), IF(Aggregate_Funding__c &gt; LOC_Commitment__c, &apos;Yes&apos;, &apos;No&apos;),
IF((Aggregate_Funding__c - Aggregate_Payoffs__c) &gt; LOC_Commitment__c, &apos;Yes&apos; ,&apos;No&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over Loan Commitment</label>
    <type>Text</type>
</CustomField>