force-app/main/default/objects/Opportunity/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LOC_Loan_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Build to Rent</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>No Renovation</fullName>
                <default>true</default>
                <label>No Renovation</label>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Condo Development</fullName>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>Adaptive Reuse</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Land Development</fullName>
            </value>
            <value>
                <fullName>Long Term Rental</fullName>
            </value>
            <value>
                <fullName>Short Term Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>