force-app/main/default/objects/Opportunity/fields/Rate_Lock_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Rate_Lock_Picklist__c</fullName>
    <label>Rate Lock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Rate Locked</fullName>
            </value>
            <value>
                <fullName>Standard Rate Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>