force-app/main/default/objects/Opportunity/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <defaultValue>CASE( $RecordType.DeveloperName , &quot;Single_Asset_Bridge_Loan&quot;, &quot;Recourse&quot;, &quot; &quot; )</defaultValue>
    <label>Recourse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recourse</fullName>
            </value>
            <value>
                <fullName>Non-Recourse</fullName>
            </value>
            <value>
                <fullName>Limited - Bad Boy</fullName>
                <isActive>false</isActive>
                <label>Limited - Bad Boy</label>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Non-Recourse (No Cash Management)</fullName>
                <isActive>false</isActive>
                <label>Non-Recourse (No Cash Management)</label>
            </value>
            <value>
                <fullName>Non-Recourse (Springing Cash Management)</fullName>
                <isActive>false</isActive>
                <label>Non-Recourse (Springing Cash Management)</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>