force-app/main/default/objects/Opportunity/fields/Requested_Index__c.field-meta.xml
<CustomField>
    <fullName>Requested_Index__c</fullName>
    <description>Secured Overnight Financing Rate (SOFR)</description>
    <label>Requested Index</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Requested_Interest_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1M Term SOFR</fullName>
            </value>
            <value>
                <fullName>3M Term SOFR</fullName>
            </value>
            <value>
                <fullName>6M Term SOFR</fullName>
            </value>
            <value>
                <fullName>1Y Term SOFR</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>1M LIBOR</fullName>
                <isActive>false</isActive>
                <label>1M LIBOR</label>
            </value>
            <value>
                <fullName>1Y LIBOR</fullName>
                <isActive>false</isActive>
                <label>1Y LIBOR</label>
            </value>
            <value>
                <fullName>3M LIBOR</fullName>
                <isActive>false</isActive>
                <label>3M LIBOR</label>
            </value>
            <value>
                <fullName>6M LIBOR</fullName>
                <isActive>false</isActive>
                <label>6M LIBOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>