force-app/main/default/objects/Opportunity/fields/Requested_Index_Floor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Index_Floor__c</fullName>
    <label>Requested Index Floor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Requested_Interest_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.00%</fullName>
            </value>
            <value>
                <fullName>0.10%</fullName>
            </value>
            <value>
                <fullName>0.15%</fullName>
            </value>
            <value>
                <fullName>0.25%</fullName>
            </value>
            <value>
                <fullName>0.50%</fullName>
            </value>
            <value>
                <fullName>0.75%</fullName>
            </value>
            <value>
                <fullName>1.00%</fullName>
            </value>
            <value>
                <fullName>1.25%</fullName>
            </value>
            <value>
                <fullName>1.50%</fullName>
            </value>
            <value>
                <fullName>1.55%</fullName>
            </value>
            <value>
                <fullName>1.60%</fullName>
            </value>
            <value>
                <fullName>1.65%</fullName>
            </value>
            <value>
                <fullName>1.70%</fullName>
            </value>
            <value>
                <fullName>1.75%</fullName>
            </value>
            <value>
                <fullName>1.80%</fullName>
            </value>
            <value>
                <fullName>1.85%</fullName>
            </value>
            <value>
                <fullName>1.90%</fullName>
            </value>
            <value>
                <fullName>1.95%</fullName>
            </value>
            <value>
                <fullName>2.00%</fullName>
            </value>
            <value>
                <fullName>2.25%</fullName>
            </value>
            <value>
                <fullName>2.30%</fullName>
            </value>
            <value>
                <fullName>2.50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>