force-app/main/default/objects/Opportunity/fields/Sold_Loan_Pool__c.field-meta.xml
<CustomField>
    <fullName>Sold_Loan_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Pool of Loans that this Loan was included in when sold</description>
    <inlineHelpText>The Pool of Loans that this Loan was included in when sold</inlineHelpText>
    <label>Sold Loan Pool</label>
    <referenceTo>Sold_Loan_Pool__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>