force-app/main/default/objects/Opportunity/fields/Stepdown_Prepayment_Period__c.field-meta.xml
<CustomField>
    <fullName>Stepdown_Prepayment_Period__c</fullName>
    <description>The Stepdown Prepayment Period</description>
    <label>Stepdown Prepayment Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Term_Loan_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3,2,1</fullName>
            </value>
            <value>
                <fullName>3,2,1,1,1</fullName>
            </value>
            <value>
                <fullName>4,3,2,1</fullName>
            </value>
            <value>
                <fullName>5,4,2,2,1</fullName>
            </value>
            <value>
                <fullName>5,4,3,2,1</fullName>
            </value>
            <value>
                <fullName>5,4,3,2,1,1,1</fullName>
            </value>
            <value>
                <fullName>5,4,3,2,2,1,1</fullName>
            </value>
            <value>
                <fullName>5,4,4,3,3,2,1</fullName>
            </value>
            <value>
                <fullName>5,5,4,3,2,1</fullName>
            </value>
            <value>
                <fullName>5,5,5,4,3,2,1</fullName>
            </value>
            <value>
                <fullName>7,6,5,4,3,2,1</fullName>
            </value>
            <value>
                <fullName>5,5,4,4,3,3,2,2,1,1</fullName>
            </value>
            <value>
                <fullName>5,5,5,5,5,4,3,2</fullName>
            </value>
            <value>
                <fullName>5,5,5,5,5,5,4,3,2</fullName>
            </value>
            <value>
                <fullName>5,5,5,5,5,4,3,2,1,1</fullName>
            </value>
            <value>
                <fullName>5,5,5,5,5,5,4,3,2,1</fullName>
            </value>
            <value>
                <fullName>10,9,8,7,6,5,4,3,2,1</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>3%(12),2%(12),1%(12)</fullName>
                <isActive>false</isActive>
                <label>3%(12),2%(12),1%(12)</label>
            </value>
            <value>
                <fullName>3,2,1,1,1 (0 Months)</fullName>
                <isActive>false</isActive>
                <label>3,2,1,1,1 (0 Months)</label>
            </value>
            <value>
                <fullName>3,3,1,1,1</fullName>
                <isActive>false</isActive>
                <label>3,3,1,1,1</label>
            </value>
            <value>
                <fullName>5,4,3,2,1 (0 Months)</fullName>
                <isActive>false</isActive>
                <label>5,4,3,2,1 (0 Months)</label>
            </value>
            <value>
                <fullName>5,5,4,4,3,3,2,2,1,1 (0 Months)</fullName>
                <isActive>false</isActive>
                <label>5,5,4,4,3,3,2,2,1,1 (0 Months)</label>
            </value>
            <value>
                <fullName>5,5,5,4,3,2,1 (0 Months)</fullName>
                <isActive>false</isActive>
                <label>5,5,5,4,3,2,1 (0 Months)</label>
            </value>
            <value>
                <fullName>7,6,5,4,3,2,1 (0 Months)</fullName>
                <isActive>false</isActive>
                <label>7,6,5,4,3,2,1 (0 Months)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>