force-app/main/default/objects/Opportunity/fields/Term_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Loan_Type__c</fullName>
    <label>Loan Term</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>7 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
            <value>
                <fullName>30 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>