force-app/main/default/objects/Opportunity/fields/Total_Borrower_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Borrower_Estimated_Value__c</fullName>
    <description>Total value of the Borrower Estimated Value field in the property</description>
    <inlineHelpText>Total value of the Borrower Estimated Value field in the property</inlineHelpText>
    <label>Total Borrower Estimated Value</label>
    <summarizedField>Property__c.Borrower_Opinion_of_Current_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Property__c.Status__c</field>
        <operation>equals</operation>
        <value>Active, Sold, Paid Off</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Property__c.Is_Parent__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Property__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>